 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.9rc1

 - [ZBX-3942] fixed agent's collector to not gather perfstat data on AIX unless it is requested (dimir)
 - [ZBX-4087] fixed error message when processing configuration file (dimir)
 - [ZBX-4158] fixed DB transaction processing, stop and abort on error (dimir)
 - [ZBX-4146] fixed page refreshing after adding new IT service (Eduard)
 - [ZBX-4176] fixed API action.update required parameters (Vedmak)
 - [ZBX-4104] fixed handle handling when executing scripts in Windows (rudolfs)
 - [ZBX-4091] removed unneeded linking for binaries (rudolfs)
 - [ZBX-4155] fixed .pid file locking not to allow multiple instances (rudolfs)
 - [ZBX-4056] fixed memory read access violation in Windows performance counters (rudolfs)
 - [ZBX-4177] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
 - [ZBX-4085] fixed compilation issues for OS X Leopard (rudolfs)

Changes for 1.8.8

1.8.8rc3 was released as 1.8.8 without any changes

Changes for 1.8.8rc3

 - [ZBX-1909] fixed keyparser to allow keys like "key,{$USERMACRO}" (Vedmak)
 - [ZBX-4157] fixed possible truncating of queries while preparing a configuration data for sending to a proxy (Sasha)
 - [ZBX-4150] fixed processing of quoted function parameters (Sasha)

Changes for 1.8.8rc2

 - [ZBX-4141] fixed possible cycling of server/proxy processes after unsuccessful execution of SQL statement (Sasha)
 - [ZBX-4135] fixed item selection in trigger expression (Eduard)

Changes for 1.8.8rc1

 - [ZBX-3676] fixed item selection in bar report (Eduard)